fix layout issue by using a flex container on the header, body, and footer

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -8,10 +8,13 @@
 }
 
 body {
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -23,27 +26,33 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 8px 16px;
 }
 
 input {
   border: 1px solid #ddd;
   border-radius: 16px;
   padding: 8px 24px;
+  margin-bottom: 22px;
+  margin-top: 5px;
   width: 400px;
 }
 
-.header {
+.header,
+.footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.header li {
+.header li,
+.footer li {
   list-style-type: none;
   padding: 16px 12px;
 }
 
-.header a {
+.header a,
+.footer a {
   text-decoration: none;
   color: #3f3f3f;
 }
@@ -54,7 +63,9 @@ input {
 }
 
 .content {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
+}
+
+.footer {
+  background-color: #eee;
 }
